refatorado a classe pessoa